Full restore to original local state